# bread-fast-bot

./: README.md  pyproject.toml
.github/workflows/: code-quality.yml
bread_fast_bot/: main.py  settings.py
tests/: test_bot.py  test_linting.py
